<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_manage_cores">Manage cores</string>
    <string name="menu_add_core">Add core</string>
    <string name="menu_edit_core">Edit core</string>
    <string name="menu_delete_core">Delete core</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_users_list">User List</string>
    <string name="menu_join_channel">Join Channel</string>
    <string name="app_name">Quasseldroid</string>
    <string name="notification_connected">Connected to core</string>
    <string name="notification_disconnected">Disconnected from core</string>
    <string name="preference_initial_backlog_limit">backlogLimit</string>
    <string name="preference_dynamic_backlog">dynamicBacklog</string>
    <string name="preference_fontsize_channel_list">fontsizeChannelList</string>
    <string name="preference_notification_vibrate">notificationvibrate</string>
    <string name="preference_notification_light">notificationlight</string>
    <string name="preference_notification_sound">notificationsound</string>
    <string name="preference_colored_text">allowcoloredtext</string>
    <string name="preference_theme">selectedtheme</string>
    <string name="preferences">Preferences</string>
    <string name="description">An Android-based client for the decentralized
		Quassel IRC client.</string>
    <string name="menu_hide_events">Hide Events</string>
    <string name="nick_list_header">Nicks</string>
    <string name="notification_connecting">Connecting to core</string>
    <string name="preference_notify_connect">notifyconnect</string>
    <string name="preference_notification_sound_file">notificationsoundfile</string>
    <string name="preference_notification_connect_sound_file">notificationconnectsoundfile</string>
    <string name="preference_fetch_to_last_seen">getallunseenbacklog</string>
    <string name="context_part">Part</string>
    <string name="context_join">Join</string>
    <string name="context_delete">Delete</string>
    <string name="context_connect">Connect</string>
    <string name="context_disconnect">Disconnect</string>
    <string name="context_hide_temporarily">Hide Temporarily</string>
    <string name="context_hide_permanently">Hide Permanently</string>
    <string name="notification_you_have_been_highlighted">You have been highlighted</string>
    <string name="dialog_delete_buffer_title">Remove buffer permanently?</string>
    <string name="dialog_delete_buffer_message">Are you sure you want to delete this buffer permanently? This action cannot be undone.</string>
    <string name="dialog_delete_buffer_yes">Yes</string>
    <string name="dialog_delete_buffer_no">No</string>

    <plurals name="notification_highlighted_on_x_buffers">
        <item quantity="one">You have highlights on %1$d buffer</item>
        <item quantity="other">You have highlights on %1$d buffers</item>
    </plurals>

    <string name="title_lag">Lag: %1$s%2$s</string>
    <string name="preference_show_lag">showlag</string>
    <string name="unit_milliseconds">ms</string>
    <string name="unit_seconds">s</string>
    <string name="users">Users</string>
    <string name="not_available">Not available now</string>
    <string name="preference_wake_lock">wakelock</string>
    <string name="pressed_back_toast">Press back again to close</string>
</resources>