<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_hide_events"
        android:icon="@drawable/content_edit"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_hide_events">
    </item>
    <item
        android:id="@+id/menu_users_list"
        android:icon="@drawable/social_group"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_users_list">
    </item>
    <item
        android:id="@+id/menu_preferences"
        android:icon="@drawable/action_settings"
        android:title="@string/preferences">
    </item>
    <item
        android:id="@+id/menu_disconnect"
        android:icon="@drawable/av_stop"
        android:title="@string/menu_disconnect">
    </item>

</menu>